All css files except DO files are revisited and scrollbars/dates fixed

--- a/UI/uiapp/src/DS/DS_DashboardPage.css
+++ b/UI/uiapp/src/DS/DS_DashboardPage.css
@@ -223,7 +223,7 @@
     max-height: 80vh;
     overflow-y: auto;
   }
-.notifications{
-  max-height: 80vh;
+.ds-dashboard-notification-panel{
+  max-height: 30vh;
   overflow-y: auto;
 }
